[gd_scene load_steps=5 format=3 uid="uid://bjwvaoein1co"]

[ext_resource type="Script" uid="uid://2w0y2hbgixoq" path="res://Scripts/GameManager.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://bp6bu4o7dlmw1" path="res://Scripts/Skills/SkillHandler.gd" id="2_r0du0"]
[ext_resource type="PackedScene" uid="uid://bluw6md5spb4h" path="res://Scenes/Components/ProgressBar/ProgressBar.tscn" id="2_uu6xs"]
[ext_resource type="PackedScene" uid="uid://rm8fmkqjgf2i" path="res://Scenes/Components/SkillBar/SkillBar.tscn" id="4_cm0pq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_glv2v")

[node name="SkillHandler" type="Node" parent="."]
script = ExtResource("2_r0du0")

[node name="MultiplayerHUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 211.0
offset_top = 241.0
offset_right = 399.0
offset_bottom = 328.0

[node name="Panel" type="Panel" parent="MultiplayerHUD"]
z_index = 1
layout_mode = 0
offset_top = 5.0
offset_right = 188.0
offset_bottom = 87.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUD/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -33.0
offset_right = 90.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="Join" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Join Game"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
unique_name_in_owner = true
spawn_path = NodePath("../Players")

[node name="Players" type="Node" parent="."]
unique_name_in_owner = true

[node name="SpawnPoint0" type="Marker2D" parent="Players"]
position = Vector2(90, 480)

[node name="SpawnPoint1" type="Marker2D" parent="Players"]
position = Vector2(1062, 480)

[node name="SpawnPoint2" type="Marker2D" parent="Players"]
position = Vector2(90, 100)

[node name="SpawnPoint3" type="Marker2D" parent="Players"]
position = Vector2(1062, 100)

[node name="CurrentMap" type="Node" parent="."]

[node name="PlayerHP" parent="." instance=ExtResource("2_uu6xs")]
visible = false
offset_top = 10.0
offset_right = 0.0
offset_bottom = 10.0

[node name="TargetHP" parent="." instance=ExtResource("2_uu6xs")]
visible = false
offset_left = 750.0
offset_top = 10.0
offset_right = 750.0
offset_bottom = 10.0

[node name="SkillBar" parent="." instance=ExtResource("4_cm0pq")]
offset_left = 100.0
offset_top = 550.0
offset_right = 100.0
offset_bottom = 550.0

[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/Host" to="." method="become_host"]
[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/Join" to="." method="join_game"]
